fix: corrects parameter name on plot function

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "de08d20e-4fcc-4e69-bb36-eb4c5b6b4b8f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5a82a25d-1fde-4275-b1bf-9a69c876530b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "81e1e9ec-ab97-4c58-b472-1a1ab55cd9cf",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "286cad53-f4d5-48cf-86f8-4cdf0a794f87",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ddc60d58-2e0c-452e-b398-834ff020139c",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "id": "20950bc2-f4b0-4324-8d05-02283319b9f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remaps classification labels\n",
+    "data['diagnosis'] = data['diagnosis'].map({'B': 0, 'M': 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "9771a924-b55a-48cf-9915-0e890f63886d",
    "metadata": {},
    "outputs": [],
@@ -333,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "18eeef19-4096-4153-8188-5089eea50ee7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_feature_histogram_between_two_classes(data_class_1, data_class_2, feature_name, feature_label, label_class_1, label_class_2, bins, alpha: float = 0.6, color_class_1: str = 'red', color_class_2: str = 'blue', kde: bool = True):\n",
-    "    s.histplot(data_class_1[feature], bins=bins, color=color_class_1, alpha=alpha, label=label_class_1, kde=True)\n",
-    "    s.histplot(data_class_2[feature], bins=bins, color=color_class_2, alpha=alpha, label=label_class_2, kde=True)\n",
+    "    s.histplot(data_class_1[feature_name], bins=bins, color=color_class_1, alpha=alpha, label=label_class_1, kde=True)\n",
+    "    s.histplot(data_class_2[feature_name], bins=bins, color=color_class_2, alpha=alpha, label=label_class_2, kde=True)\n",
     "    plt.title(f'Histograma de {column}')\n",
     "    plt.xlabel(column)\n",
     "    plt.ylabel('Frequência')\n",
@@ -351,19 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "20950bc2-f4b0-4324-8d05-02283319b9f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remaps classification labels\n",
-    "data['diagnosis'] = data['diagnosis'].map({'B': 0, 'M': 1})"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a4d8ca4a-900a-4aec-981f-94840e06aa1a",
+   "id": "8dce4077-3430-416e-95c1-5a6a0f721899",
    "metadata": {},
    "outputs": [],
    "source": []
