feat: adds description on dataset read

--- a/main.ipynb
+++ b/main.ipynb
@@ -27,6 +27,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a12297f-8f1a-4209-ad49-5c9586edd5c1",
+   "metadata": {},
+   "source": [
+    "## _Dataset_\n",
+    "\n",
+    "O _Dataset_ utilizado é o ___Breast Cancer Wisconsin (Diagnostic) Data Set___, com informações de imagens digitalizadas de tumores em seios.\n",
+    "\n",
+    "As _features_ presentes no conjunto de dados são as medidas e descrições dessas massas, levando a identificação sobre o tumor ser benigno ou maligno.\n",
+    "\n",
+    "O _dataset_ pode ser encontrado no [Kaggle](https://www.kaggle.com/datasets/uciml/breast-cancer-wisconsin-data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "81e1e9ec-ab97-4c58-b472-1a1ab55cd9cf",
@@ -358,6 +372,14 @@
     "    plt.legend()\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab13c13f-ab03-45d6-b5cb-d2fc7a62e410",
+   "metadata": {},
+   "source": [
+    "## Análise sobre _Features_"
    ]
   },
   {
