feat!: adds analysis over two features

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "de08d20e-4fcc-4e69-bb36-eb4c5b6b4b8f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5a82a25d-1fde-4275-b1bf-9a69c876530b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "81e1e9ec-ab97-4c58-b472-1a1ab55cd9cf",
    "metadata": {},
    "outputs": [],
@@ -54,320 +54,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "286cad53-f4d5-48cf-86f8-4cdf0a794f87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 569 entries, 0 to 568\n",
-      "Data columns (total 33 columns):\n",
-      " #   Column                   Non-Null Count  Dtype  \n",
-      "---  ------                   --------------  -----  \n",
-      " 0   id                       569 non-null    int64  \n",
-      " 1   diagnosis                569 non-null    object \n",
-      " 2   radius_mean              569 non-null    float64\n",
-      " 3   texture_mean             569 non-null    float64\n",
-      " 4   perimeter_mean           569 non-null    float64\n",
-      " 5   area_mean                569 non-null    float64\n",
-      " 6   smoothness_mean          569 non-null    float64\n",
-      " 7   compactness_mean         569 non-null    float64\n",
-      " 8   concavity_mean           569 non-null    float64\n",
-      " 9   concave points_mean      569 non-null    float64\n",
-      " 10  symmetry_mean            569 non-null    float64\n",
-      " 11  fractal_dimension_mean   569 non-null    float64\n",
-      " 12  radius_se                569 non-null    float64\n",
-      " 13  texture_se               569 non-null    float64\n",
-      " 14  perimeter_se             569 non-null    float64\n",
-      " 15  area_se                  569 non-null    float64\n",
-      " 16  smoothness_se            569 non-null    float64\n",
-      " 17  compactness_se           569 non-null    float64\n",
-      " 18  concavity_se             569 non-null    float64\n",
-      " 19  concave points_se        569 non-null    float64\n",
-      " 20  symmetry_se              569 non-null    float64\n",
-      " 21  fractal_dimension_se     569 non-null    float64\n",
-      " 22  radius_worst             569 non-null    float64\n",
-      " 23  texture_worst            569 non-null    float64\n",
-      " 24  perimeter_worst          569 non-null    float64\n",
-      " 25  area_worst               569 non-null    float64\n",
-      " 26  smoothness_worst         569 non-null    float64\n",
-      " 27  compactness_worst        569 non-null    float64\n",
-      " 28  concavity_worst          569 non-null    float64\n",
-      " 29  concave points_worst     569 non-null    float64\n",
-      " 30  symmetry_worst           569 non-null    float64\n",
-      " 31  fractal_dimension_worst  569 non-null    float64\n",
-      " 32  Unnamed: 32              0 non-null      float64\n",
-      "dtypes: float64(31), int64(1), object(1)\n",
-      "memory usage: 146.8+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ddc60d58-2e0c-452e-b398-834ff020139c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>diagnosis</th>\n",
-       "      <th>radius_mean</th>\n",
-       "      <th>texture_mean</th>\n",
-       "      <th>perimeter_mean</th>\n",
-       "      <th>area_mean</th>\n",
-       "      <th>smoothness_mean</th>\n",
-       "      <th>compactness_mean</th>\n",
-       "      <th>concavity_mean</th>\n",
-       "      <th>concave points_mean</th>\n",
-       "      <th>...</th>\n",
-       "      <th>texture_worst</th>\n",
-       "      <th>perimeter_worst</th>\n",
-       "      <th>area_worst</th>\n",
-       "      <th>smoothness_worst</th>\n",
-       "      <th>compactness_worst</th>\n",
-       "      <th>concavity_worst</th>\n",
-       "      <th>concave points_worst</th>\n",
-       "      <th>symmetry_worst</th>\n",
-       "      <th>fractal_dimension_worst</th>\n",
-       "      <th>Unnamed: 32</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>842302</td>\n",
-       "      <td>M</td>\n",
-       "      <td>17.99</td>\n",
-       "      <td>10.38</td>\n",
-       "      <td>122.80</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>0.11840</td>\n",
-       "      <td>0.27760</td>\n",
-       "      <td>0.3001</td>\n",
-       "      <td>0.14710</td>\n",
-       "      <td>...</td>\n",
-       "      <td>17.33</td>\n",
-       "      <td>184.60</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>0.1622</td>\n",
-       "      <td>0.6656</td>\n",
-       "      <td>0.7119</td>\n",
-       "      <td>0.2654</td>\n",
-       "      <td>0.4601</td>\n",
-       "      <td>0.11890</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>842517</td>\n",
-       "      <td>M</td>\n",
-       "      <td>20.57</td>\n",
-       "      <td>17.77</td>\n",
-       "      <td>132.90</td>\n",
-       "      <td>1326.0</td>\n",
-       "      <td>0.08474</td>\n",
-       "      <td>0.07864</td>\n",
-       "      <td>0.0869</td>\n",
-       "      <td>0.07017</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.41</td>\n",
-       "      <td>158.80</td>\n",
-       "      <td>1956.0</td>\n",
-       "      <td>0.1238</td>\n",
-       "      <td>0.1866</td>\n",
-       "      <td>0.2416</td>\n",
-       "      <td>0.1860</td>\n",
-       "      <td>0.2750</td>\n",
-       "      <td>0.08902</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>84300903</td>\n",
-       "      <td>M</td>\n",
-       "      <td>19.69</td>\n",
-       "      <td>21.25</td>\n",
-       "      <td>130.00</td>\n",
-       "      <td>1203.0</td>\n",
-       "      <td>0.10960</td>\n",
-       "      <td>0.15990</td>\n",
-       "      <td>0.1974</td>\n",
-       "      <td>0.12790</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25.53</td>\n",
-       "      <td>152.50</td>\n",
-       "      <td>1709.0</td>\n",
-       "      <td>0.1444</td>\n",
-       "      <td>0.4245</td>\n",
-       "      <td>0.4504</td>\n",
-       "      <td>0.2430</td>\n",
-       "      <td>0.3613</td>\n",
-       "      <td>0.08758</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>84348301</td>\n",
-       "      <td>M</td>\n",
-       "      <td>11.42</td>\n",
-       "      <td>20.38</td>\n",
-       "      <td>77.58</td>\n",
-       "      <td>386.1</td>\n",
-       "      <td>0.14250</td>\n",
-       "      <td>0.28390</td>\n",
-       "      <td>0.2414</td>\n",
-       "      <td>0.10520</td>\n",
-       "      <td>...</td>\n",
-       "      <td>26.50</td>\n",
-       "      <td>98.87</td>\n",
-       "      <td>567.7</td>\n",
-       "      <td>0.2098</td>\n",
-       "      <td>0.8663</td>\n",
-       "      <td>0.6869</td>\n",
-       "      <td>0.2575</td>\n",
-       "      <td>0.6638</td>\n",
-       "      <td>0.17300</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>84358402</td>\n",
-       "      <td>M</td>\n",
-       "      <td>20.29</td>\n",
-       "      <td>14.34</td>\n",
-       "      <td>135.10</td>\n",
-       "      <td>1297.0</td>\n",
-       "      <td>0.10030</td>\n",
-       "      <td>0.13280</td>\n",
-       "      <td>0.1980</td>\n",
-       "      <td>0.10430</td>\n",
-       "      <td>...</td>\n",
-       "      <td>16.67</td>\n",
-       "      <td>152.20</td>\n",
-       "      <td>1575.0</td>\n",
-       "      <td>0.1374</td>\n",
-       "      <td>0.2050</td>\n",
-       "      <td>0.4000</td>\n",
-       "      <td>0.1625</td>\n",
-       "      <td>0.2364</td>\n",
-       "      <td>0.07678</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
-       "0    842302         M        17.99         10.38          122.80     1001.0   \n",
-       "1    842517         M        20.57         17.77          132.90     1326.0   \n",
-       "2  84300903         M        19.69         21.25          130.00     1203.0   \n",
-       "3  84348301         M        11.42         20.38           77.58      386.1   \n",
-       "4  84358402         M        20.29         14.34          135.10     1297.0   \n",
-       "\n",
-       "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
-       "0          0.11840           0.27760          0.3001              0.14710   \n",
-       "1          0.08474           0.07864          0.0869              0.07017   \n",
-       "2          0.10960           0.15990          0.1974              0.12790   \n",
-       "3          0.14250           0.28390          0.2414              0.10520   \n",
-       "4          0.10030           0.13280          0.1980              0.10430   \n",
-       "\n",
-       "   ...  texture_worst  perimeter_worst  area_worst  smoothness_worst  \\\n",
-       "0  ...          17.33           184.60      2019.0            0.1622   \n",
-       "1  ...          23.41           158.80      1956.0            0.1238   \n",
-       "2  ...          25.53           152.50      1709.0            0.1444   \n",
-       "3  ...          26.50            98.87       567.7            0.2098   \n",
-       "4  ...          16.67           152.20      1575.0            0.1374   \n",
-       "\n",
-       "   compactness_worst  concavity_worst  concave points_worst  symmetry_worst  \\\n",
-       "0             0.6656           0.7119                0.2654          0.4601   \n",
-       "1             0.1866           0.2416                0.1860          0.2750   \n",
-       "2             0.4245           0.4504                0.2430          0.3613   \n",
-       "3             0.8663           0.6869                0.2575          0.6638   \n",
-       "4             0.2050           0.4000                0.1625          0.2364   \n",
-       "\n",
-       "   fractal_dimension_worst  Unnamed: 32  \n",
-       "0                  0.11890          NaN  \n",
-       "1                  0.08902          NaN  \n",
-       "2                  0.08758          NaN  \n",
-       "3                  0.17300          NaN  \n",
-       "4                  0.07678          NaN  \n",
-       "\n",
-       "[5 rows x 33 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "20950bc2-f4b0-4324-8d05-02283319b9f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remaps classification labels\n",
-    "data['diagnosis'] = data['diagnosis'].map({'B': 0, 'M': 1})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9771a924-b55a-48cf-9915-0e890f63886d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Separates data based on classification\n",
+    "# Remapeia os labels de classificação\n",
+    "data['diagnosis'] = data['diagnosis'].map({'B': 0, 'M': 1})\n",
+    "\n",
+    "# Separa os casos negativos e positivos\n",
     "negative = data[data['diagnosis'] == 0]\n",
     "positive = data[data['diagnosis'] == 1]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab13c13f-ab03-45d6-b5cb-d2fc7a62e410",
+   "metadata": {},
+   "source": [
+    "## Análise de Frequência sobre _Features_\n",
+    "\n",
+    "Nesta seção, serão realizadas comparações entre _features_ para casos positivos e negativos, buscando identificar fatores comuns nas classificações possíveis.\n",
+    "\n",
+    "Serão gerados histogramas com 15 e 30 _bins_ para análise."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "18eeef19-4096-4153-8188-5089eea50ee7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Função que gera o histograma comparando as features nas duas classes possíveis\n",
     "def plot_feature_histogram_between_two_classes(data_class_1, data_class_2, feature_name, feature_label, label_class_1, label_class_2, bins, alpha: float = 0.6, color_class_1: str = 'red', color_class_2: str = 'blue', kde: bool = True):\n",
     "    s.histplot(data_class_1[feature_name], bins=bins, color=color_class_1, alpha=alpha, label=label_class_1, kde=True)\n",
     "    s.histplot(data_class_2[feature_name], bins=bins, color=color_class_2, alpha=alpha, label=label_class_2, kde=True)\n",
-    "    plt.title(f'Histograma de {column}')\n",
-    "    plt.xlabel(column)\n",
+    "    plt.title(f'Histograma de {feature_label}')\n",
+    "    plt.xlabel(feature_label)\n",
     "    plt.ylabel('Frequência')\n",
     "    plt.legend()\n",
     "    plt.tight_layout()\n",
@@ -376,19 +120,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab13c13f-ab03-45d6-b5cb-d2fc7a62e410",
+   "id": "9173ec8f-be1b-44c2-9903-70611d77a99f",
    "metadata": {},
    "source": [
-    "## Análise sobre _Features_"
+    "### Primeira _Feature_\n",
+    "\n",
+    "A primeira análise é sobre a _feature_ ___radius_mean___, a qual representa a média das distâncias do centro do tumor até suas extremidades."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dce4077-3430-416e-95c1-5a6a0f721899",
+   "id": "a8d1e692-b9b5-4f0e-bfa9-038eacb3f6b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_name = 'radius_mean'\n",
+    "feature_label = 'Média de Raio'\n",
+    "label_class_1 = 'Negativo'\n",
+    "label_class_2 = 'Positivo'\n",
+    "\n",
+    "bins = 15\n",
+    "plot_feature_histogram_between_two_classes(negative, positive, feature_name, feature_label, label_class_1, label_class_2, bins)\n",
+    "\n",
+    "bins = 30\n",
+    "plot_feature_histogram_between_two_classes(negative, positive, feature_name, feature_label, label_class_1, label_class_2, bins)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c27e4973-7ca7-4dc7-a032-dd035f8b66ba",
+   "metadata": {},
+   "source": [
+    "É possível ver que, apesar de ocorrer alguma sobreposição nos histogramas, há uma grande quantidade de casos positivos que estão em valores bem acima do valor máximo de um caso negativo.\n",
+    "\n",
+    "Assim, pode-se afirmar que há importância na análise deste _feature_ em um projeto de aprendizado de máquina pois há boa distinção entre as classificações realizadas sobre os valores dispostos no gráfico.\n",
+    "\n",
+    "Além disso, a análise com diferentes quantidade de _bins_ mostra as nuâncias e detalhes de cada distribuição, apesar de a curva continuar a mesma. Assim, o primeiro gráfico é válido para uma análise inicial, enquanto o segundo é muito importante para confirmar a tendência descrita nos parágrafos anteriores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c509769-79d5-4a6f-8e5f-9bdab26e6659",
+   "metadata": {},
+   "source": [
+    "### Segunda _Feature_\n",
+    "\n",
+    "A segunda análise é sobre a _feature_ ___smoothness mean___, a qual representa a média da suavidade dos raios do contorno das células tumorais."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb6921d9-cb34-4854-a3fd-d2c9647b4b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_name = 'smoothness_mean'\n",
+    "feature_label = 'Média de Suavidade de Contorno'\n",
+    "label_class_1 = 'Negativo'\n",
+    "label_class_2 = 'Positivo'\n",
+    "\n",
+    "bins = 15\n",
+    "plot_feature_histogram_between_two_classes(negative, positive, feature_name, feature_label, label_class_1, label_class_2, bins)\n",
+    "\n",
+    "bins = 30\n",
+    "plot_feature_histogram_between_two_classes(negative, positive, feature_name, feature_label, label_class_1, label_class_2, bins)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aa82707-c0b7-4bd7-9b86-5c007011d770",
+   "metadata": {},
+   "source": [
+    "Na segunda _feature_, percebe-se que a sobreposição dos gráficos é bem maior, dificultando a precisão em afirmar que um determinado valor nessa _feature_ pode levar a uma classificação positiva ou negativa - comportamento diferente da primeira _feature_ analisada.\n",
+    "\n",
+    "No mais, a análise sobre duas diferentes quantidades de _bins_ segue a mesma, replicando a explicação feita anteriormente."
+   ]
   }
  ],
  "metadata": {
