feat!: makes study over artificial data

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "de08d20e-4fcc-4e69-bb36-eb4c5b6b4b8f",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import scipy.stats as s\n",
     "import seaborn as sns"
    ]
   },
@@ -592,6 +593,252 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15821766-b4e0-4db9-a561-105bd4ee8508",
+   "metadata": {},
+   "source": [
+    "### Estudo sem Padronização\n",
+    "\n",
+    "Nesta seção, será feita uma análise sobre um tumor com média de raio de 14 centímetros.\n",
+    "\n",
+    "Como não há padronização, esse valor será comparado com as médias já coletadas de casos positivos e negativos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fe85fc78-b18f-4391-8880-299eb4225eac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor da amostra: 14\n",
+      "Média de casos negativos: 12.146523809523808\n",
+      "Média de casos positivos: 17.462830188679245\n",
+      "Distância da amostra para a média de casos negativos: 1.8534761904761918\n",
+      "Distância da amostra para a média de casos positivos: 3.462830188679245\n",
+      "A amostra é positiva?: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_radius_mean = 14\n",
+    "\n",
+    "# Mede distância da amostra para as médias obtidas em casos negativos e positivos, respectivamente\n",
+    "negative_sample_distance = abs(sample_radius_mean - negative_mean)\n",
+    "positive_sample_distance = abs(sample_radius_mean - positive_mean)\n",
+    "\n",
+    "print(f'Valor da amostra: {sample_radius_mean}')\n",
+    "print(f'Média de casos negativos: {negative_mean}')\n",
+    "print(f'Média de casos positivos: {positive_mean}')\n",
+    "print(f'Distância da amostra para a média de casos negativos: {negative_sample_distance}')\n",
+    "print(f'Distância da amostra para a média de casos positivos: {positive_sample_distance}')\n",
+    "print(f'A amostra é positiva?: {positive_sample_distance < negative_sample_distance}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a451ba7-fd54-4e51-9581-c42e47b7bf6f",
+   "metadata": {},
+   "source": [
+    "### Estudo com Padronização\n",
+    "\n",
+    "Nesta seção, será feita a padronização da distribuição, visando facilitar cálculos e consultas de probabilidades.\n",
+    "\n",
+    "Será repetido o estudo sobre um exemplo com 14 centímetros de média de raio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "142d15c8-67c3-467a-831d-95afc80c487f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_radius_mean = 14\n",
+    "\n",
+    "# Realiza padronização dos dados artificiais com a média e o desvio padrão\n",
+    "negative_artificial_standard = (negative_artificial - negative_mean) / negative_std\n",
+    "positive_artificial_standard = (positive_artificial - positive_mean) / positive_std\n",
+    "\n",
+    "# Utiliza a função `scipy.stats.norm.cdf` para calcular as probabilidades com os dados artificiais padronizados\n",
+    "negative_artificial_probs = s.norm.cdf(negative_artificial_standard)\n",
+    "positive_artificial_probs = s.norm.cdf(positive_artificial_standard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0d207ba3-d2a3-4fa4-bace-36a18e242da6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Raio Médio Artificial Padronizado</th>\n",
+       "      <th>Probabilidade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.496714</td>\n",
+       "      <td>0.690305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.138264</td>\n",
+       "      <td>0.445016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.647689</td>\n",
+       "      <td>0.741407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.523030</td>\n",
+       "      <td>0.936124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.234153</td>\n",
+       "      <td>0.407433</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Raio Médio Artificial Padronizado  Probabilidade\n",
+       "0                           0.496714       0.690305\n",
+       "1                          -0.138264       0.445016\n",
+       "2                           0.647689       0.741407\n",
+       "3                           1.523030       0.936124\n",
+       "4                          -0.234153       0.407433"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cria DataFrame para armazenar as valores artificiais com seus respectivos valores de casos negativos\n",
+    "artificial_df_negative_probs = pd.DataFrame({\n",
+    "    'Raio Médio Artificial Padronizado': negative_artificial_standard,\n",
+    "    'Probabilidade': negative_artificial_probs\n",
+    "})\n",
+    "\n",
+    "artificial_df_negative_probs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c2c971a0-c5b2-4f50-9dca-ff4a653f14f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Raio Médio Padronizado</th>\n",
+       "      <th>Probabilidade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.415371</td>\n",
+       "      <td>0.078480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.420645</td>\n",
+       "      <td>0.337007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.342715</td>\n",
+       "      <td>0.365907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.802277</td>\n",
+       "      <td>0.211196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.161286</td>\n",
+       "      <td>0.435934</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Raio Médio Padronizado  Probabilidade\n",
+       "0               -1.415371       0.078480\n",
+       "1               -0.420645       0.337007\n",
+       "2               -0.342715       0.365907\n",
+       "3               -0.802277       0.211196\n",
+       "4               -0.161286       0.435934"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cria DataFrame para armazenar as valores artificiais com seus respectivos valores de casos positivos\n",
+    "artificial_df_positive_probs = pd.DataFrame({\n",
+    "    'Raio Médio Artificial Padronizado': positive_artificial_standard,\n",
+    "    'Probabilidade': positive_artificial_probs\n",
+    "})\n",
+    "\n",
+    "artificial_df_positive_probs.head()"
    ]
   }
  ],
