refactor: rewrites markdowns

--- a/main.ipynb
+++ b/main.ipynb
@@ -850,7 +850,7 @@
    "source": [
     "## Atividade sobre Exemplo de Moeda Viciada\n",
     "\n",
-    "Nesta seção, será realizada a etapa __C__ do trabalho."
+    "Nesta seção, será realizada a etapa __C__ do trabalho, utilizando a probabilidade `s = 0.8` em uma moeda viciada."
    ]
   },
   {
@@ -1003,7 +1003,9 @@
    "id": "bbb3886d-08c3-43db-bf9e-b017b5b2c6b3",
    "metadata": {},
    "source": [
-    "Comparando a probabilidade calculada e o valor real utilizando a quantidade de amostras, percebe-se que o valor está próximo e isso adiciona credibilidade ao estudo realizado."
+    "Comparando a probabilidade calculada e o valor real utilizando a quantidade de amostras, percebe-se que o valor está próximo e isso adiciona credibilidade ao estudo realizado.\n",
+    "\n",
+    "Além disso, percebe-se a queda bruca na probabilidade desse cenário de 48 sucessos em 50 tentativas quando comparado ao apresentado em sala de aula com `s = 0.95`: a probabilidade cai em 26%."
    ]
   }
  ],
